# voding-hub

./: CLAUDE.md  package.json  pnpm-lock.yaml
openspec/: README.md
openspec/changes/archive/2026-02-06-voding-hub-mvp/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-06-voding-hub-mvp/specs/config-adapters/: spec.md
openspec/changes/archive/2026-02-06-voding-hub-mvp/specs/file-watcher/: spec.md
openspec/changes/archive/2026-02-06-voding-hub-mvp/specs/mcp-management/: spec.md
openspec/changes/archive/2026-02-06-voding-hub-mvp/specs/project-management/: spec.md
openspec/changes/archive/2026-02-06-voding-hub-mvp/specs/rules-editor/: spec.md
openspec/proposals/: proposal.md
openspec/specs/skills-management/: spec.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/: claude.rs  codex.rs  gemini.rs  mod.rs  opencode.rs  tests.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/core/: adapter.rs  converter.rs  mod.rs  models.rs  watcher.rs
src-tauri/src/db/: connection.rs  mod.rs  projects.rs  tests.rs
src/components/: AddProjectDialog.tsx  CopyMcpDialog.tsx  CopySkillDialog.tsx  Layout.tsx  McpServerForm.tsx  McpServerList.tsx  ProjectConfigOverview.tsx  ProjectList.tsx  RemoveProjectDialog.tsx  RulesEditor.tsx  Sidebar.tsx  SkillDetail.tsx  SkillList.tsx  skillValidation.ts
src/pages/: GlobalConfigPage.tsx  ProjectsPage.tsx  SettingsPage.tsx
src/stores/: configStore.ts
